--- a/package.json
+++ b/package.json
@@ -3,15 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/history": "^5.0.0",
     "@types/jest": "^27.5.2",
+    "@types/material-ui": "^0.21.12",
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.13",
     "@types/react-dom": "^18.0.5",
+    "@types/react-router-dom": "^5.3.3",
+    "airtable": "^0.11.4",
+    "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
